--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,39 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
-
-
-# backwards compatibility
-pathlib2
+alabaster==0.7.12
+awscli==1.16.94
+Babel==2.6.0
+botocore==1.12.84
+certifi==2018.11.29
+chardet==3.0.4
+Click==7.0
+colorama==0.4.1
+coverage==4.5.2
+docutils==0.14
+flake8==3.6.0
+idna==2.8
+imagesize==1.1.0
+Jinja2==2.10
+jmespath==0.9.3
+MarkupSafe==1.1.0
+mccabe==0.6.1
+numpy==1.16.0
+numpy-stl==2.9.0
+packaging==19.0
+pathlib2==2.3.3
+pyasn1==0.4.5
+pycodestyle==2.4.0
+pyflakes==2.0.0
+Pygments==2.3.1
+pyparsing==2.3.1
+python-dateutil==2.7.5
+python-dotenv==0.10.1
+python-utils==2.3.0
+pytz==2018.9
+PyYAML==3.13
+requests==2.21.0
+rsa==3.4.2
+s3transfer==0.1.13
+six==1.12.0
+snowballstemmer==1.2.1
+Sphinx==1.8.3
+sphinxcontrib-websupport==1.1.0
+urllib3==1.24.1
