--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,6 @@ notebooks/cynthia/*
 # ignore until ready to share
 models/stl_rnn
 models/stl_vae
+# data for tf tutorial of style transfer
+notebooks/vgg16/*
 
