--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ botocore==1.12.84
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
+cloudpickle==0.7.0
 colorama==0.4.1
 coverage==4.5.2
 cycler==0.10.0
+dask==1.1.1
 decorator==4.3.2
 defusedxml==0.5.0
 docutils==0.14
@@ -44,6 +46,7 @@ mccabe==0.6.1
 mistune==0.8.4
 nbconvert==5.4.0
 nbformat==4.4.0
+networkx==2.2
 notebook==5.7.4
 numpy==1.16.0
 numpy-stl==2.9.0
@@ -54,6 +57,7 @@ parso==0.3.2
 pathlib2==2.3.3
 pexpect==4.6.0
 pickleshare==0.7.5
+Pillow==5.4.1
 pkg-resources==0.0.0
 prometheus-client==0.5.0
 prompt-toolkit==2.0.8
@@ -68,6 +72,7 @@ python-dateutil==2.7.5
 python-dotenv==0.10.1
 python-utils==2.3.0
 pytz==2018.9
+PyWavelets==1.0.1
 pywinpty==0.5.5
 PyYAML==3.13
 pyzmq==17.1.2
@@ -75,6 +80,7 @@ qtconsole==4.4.3
 requests==2.21.0
 rsa==3.4.2
 s3transfer==0.1.13
+scikit-image==0.14.2
 scipy==1.2.0
 seaborn==0.9.0
 Send2Trash==1.5.0
@@ -88,6 +94,7 @@ tensorflow-probability==0.5.0
 termcolor==1.1.0
 terminado==0.8.1
 testpath==0.4.2
+toolz==0.9.0
 tornado==5.1.1
 traitlets==4.3.2
 urllib3==1.24.1
