the voxel vae is learning!

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ notebooks/cynthia/*
 # ignore until ready to share
 models/stl_rnn
 models/stl_vae
+models/voxel_vae
 # data for tf tutorial of style transfer
 notebooks/vgg16/*
 
