--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ cycler==0.10.0
 dask==1.1.1
 decorator==4.3.2
 defusedxml==0.5.0
+docopt==0.6.2
 docutils==0.14
 entrypoints==0.3
 flake8==3.6.0
@@ -31,6 +32,7 @@ ipywidgets==7.4.2
 jedi==0.13.2
 Jinja2==2.10
 jmespath==0.9.3
+jsonpickle==0.9.6
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.4
@@ -44,6 +46,7 @@ MarkupSafe==1.1.0
 matplotlib==3.0.2
 mccabe==0.6.1
 mistune==0.8.4
+munch==2.3.2
 nbconvert==5.4.0
 nbformat==4.4.0
 networkx==2.2
@@ -63,6 +66,7 @@ prometheus-client==0.5.0
 prompt-toolkit==2.0.8
 protobuf==3.6.1
 ptyprocess==0.6.0
+py-cpuinfo==4.0.0
 pyasn1==0.4.5
 pycodestyle==2.4.0
 pyflakes==2.0.0
@@ -80,6 +84,7 @@ qtconsole==4.4.3
 requests==2.21.0
 rsa==3.4.2
 s3transfer==0.1.13
+sacred==0.7.4
 scikit-image==0.14.2
 scipy==1.2.0
 seaborn==0.9.0
@@ -102,3 +107,4 @@ wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.14.1
 widgetsnbextension==3.4.2
+wrapt==1.11.1
