--- a/src/configs/config_10k_animals.json
+++ b/src/configs/config_10k_animals.json
@@ -1,11 +1,14 @@
 {
     "cfg": {
         "dataset": {
-            "index": "../data/processed/thingi10k_index_10.csv"
+            "index": "../data/processed/thingi10k_index.csv",
+            "tag": "animal",
+            "pctile": 0.9
         },
         "voxel_vae": {
             "voxels_dim": 32,
-            "batch_size": 10,
+            "batch_size": 22,
+            "example_stl_id": 126660,
             "voxel_prob_threshold": 0.065,
             "learning_rate": 0.0001,
             "keep_prob": 1.0,
@@ -15,7 +18,7 @@
             "verbose": true,
             "debug": true,
             "generator_verbose": false,
-            "epochs": 1,
+            "epochs": 50,
             "input_repeats": 1,
             "display_step": 1,
             "save_step": 10
