--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ pkg-resources==0.0.0
 prometheus-client==0.5.0
 prompt-toolkit==2.0.8
 protobuf==3.6.1
+psutil==5.6.1
 ptyprocess==0.6.0
 py-cpuinfo==4.0.0
 pyasn1==0.4.5
